商汤数据集vio运行ok

--- a/config/st.yaml
+++ b/config/st.yaml
@@ -22,6 +22,22 @@ Camera.fps: 30.0
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
 
+# Transformation from camera to body-frame (imu)
+Tbc: !!opencv-matrix
+  rows: 4
+  cols: 4
+  dt: f
+  data: [0, -1, 0, -0.00165,
+         -1, 0, 0, -0.00995,
+         0, 0, -1, 0.00067,
+         0.0, 0.0, 0.0, 1.0]
+
+# IMU noise
+IMU.NoiseGyro: 0.0025 #1.6968e-04
+IMU.NoiseAcc: 0.025 #2.0e-3
+IMU.GyroWalk: 8e-04
+IMU.AccWalk: 0.02 # 3e-03
+IMU.Frequency: 400
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
 #--------------------------------------------------------------------------------------------
