去除相机模型代码，将优化中投影等调用相机模型部分代码重写，测试通过

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,17 @@
     "valarray": "cpp",
     "algorithm": "cpp",
     "memory": "cpp",
-    "core": "cpp"
+    "core": "cpp",
+    "bit": "cpp",
+    "condition_variable": "cpp",
+    "map": "cpp",
+    "set": "cpp",
+    "iterator": "cpp",
+    "memory_resource": "cpp",
+    "optional": "cpp",
+    "random": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "variant": "cpp"
   }
 }
